if (WITH_OPENCV)
  include_directories(${NEWMAT_INCLUDE_DIRS})
  include_directories(${PROJECT_SOURCE_DIR}/3rdparty/cvblob)
  include_directories(${PROJECT_SOURCE_DIR}/include/shapes/)
  include_directories(${PROJECT_SOURCE_DIR}/include/thermo/)
  include_directories(/usr/include/)
  include_directories(/usr/include/opencv)

  add_executable(caliboard caliboard.cc) 
  add_executable(thermo thermo.cc) 

  if(UNIX)
    target_link_libraries(caliboard scan_shared shape_shared ${NEWMAT_LIBRARIES_SHARED} ${ANN_LIBRARIES_SHARED} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
    target_link_libraries(thermo scan_shared shape_shared ${NEWMAT_LIBRARIES_SHARED} ${ANN_LIBRARIES_SHARED} ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} cvblob_shared ${OpenCV_LIBS})
  endif()

  if (WIN32)
    target_link_libraries(caliboard scan_static shape_shared XGetopt ${NEWMAT_LIBRARIES_SHARED} ${ANN_LIBRARIES_SHARED})
    target_link_libraries(thermo scan_static shape_shared XGetopt ${NEWMAT_LIBRARIES_SHARED} ${ANN_LIBRARIES_SHARED} cvblob_shared ${OpenCV_LIBS})
  endif()
endif()
